--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/choibyungjae/wetube.git"
   },
   "scripts": {
-    "dev": "nodemon --exec npx babel-node index.js"
+    "dev": "nodemon --exec npx babel-node src/server.js"
   },
   "author": "ByungJae",
   "license": "MIT",
@@ -16,7 +16,8 @@
   },
   "homepage": "https://github.com/choibyungjae/wetube#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
