--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ COOKIE_SECRET=HWFU234YR9T8EWRFO9348HR9
 DB_URL=mongodb://127.0.0.1:27017/wetube
 GH_CLIENT=ae2e8748a53e5f582d80
 GH_SECRET=9b4635f513adfa4a0539be833151d1e1f2678256
+AWS_ID=AKIA4IZSPBMPF2GDTUEO
+AWS_SECRET=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
